--- a/src/main/res/layout/activity_presenter_slot_selection.xml
+++ b/src/main/res/layout/activity_presenter_slot_selection.xml
@@ -14,7 +14,19 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="@string/presenter_slot_selection_title"
-        app:titleTextColor="@color/white" />
+        app:titleTextColor="@color/white">
+        
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_reload"
+            style="@style/SemScanButtonPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="8dp"
+            android:text="@string/presenter_slot_refresh"
+            android:textColor="@color/white" />
+            
+    </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -83,22 +95,6 @@
             android:layout_gravity="center"
             android:visibility="gone" />
     </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        android:gravity="end">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_reload"
-            style="@style/SemScanButtonOutlinedPrimary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/presenter_slot_refresh" />
-
-    </LinearLayout>
 
 </LinearLayout>
 
