--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -34,6 +34,11 @@
     <color name="error_red">#FFF44336</color>
     <color name="info_blue">#FF2196F3</color>
     
+    <!-- Material Design status colors -->
+    <color name="green_500">#FF4CAF50</color>
+    <color name="yellow_500">#FFFFEB3B</color>
+    <color name="red_500">#FFF44336</color>
+    
     <!-- Background colors -->
     <color name="background_light">#FFF5F5F5</color>
     <color name="background_white">#FFFFFFFF</color>
