--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -27,6 +27,24 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
+    <style name="SemScanButtonSuccess" parent="Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/success_green</item>
+    </style>
+
+    <style name="SemScanButtonWarning" parent="Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/warning_orange</item>
+    </style>
+
+    <style name="SemScanButtonDanger" parent="Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/error_red</item>
+    </style>
+
     <style name="SemScanInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxBackgroundMode">outline</item>
         <item name="boxStrokeColor">@color/primary_blue</item>
