--- a/src/main/res/layout/activity_modern_qr_scanner.xml
+++ b/src/main/res/layout/activity_modern_qr_scanner.xml
@@ -68,6 +68,7 @@
 
         <!-- Scan Frame Container -->
         <FrameLayout
+            android:id="@+id/scan_frame_container"
             android:layout_width="280dp"
             android:layout_height="280dp"
             android:layout_centerInParent="true"
@@ -96,7 +97,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/scan_frame"
+            android:layout_below="@id/scan_frame_container"
             android:layout_marginTop="32dp"
             android:orientation="vertical"
             android:gravity="center"
